# ghacg-dl

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py  request_check.py  settings.py
app/api/: router.py
app/exceptions/: codes.py  exceptions.py  handlers.py
app/exceptions/templates/: 403.html  error.html
utils/: config.py  exceptions.py  openlist.py
